feat: pavucontrol-qt

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -24,7 +24,7 @@ bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
-bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
+bind = $mainMod, A, exec, pkill pavucontrol-qt || pavucontrol-qt --tab 3
 bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app protonvpn-app
 bind = $mainMod, O, exec, $focus_or_launch obsidian obsidian
 bind = $mainMod, S, exec, $focus_or_launch spotify spotify
