--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -39,7 +39,7 @@ windowrule {
 
 windowrule {
     name = pavucontrol
-    match:class = org.pulseaudio.pavucontrol
+    match:class = pavucontrol-qt
 
     float = on
     size = (monitor_w*0.3) (monitor_h*0.8)
