--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -222,7 +222,7 @@ git:
     - # pattern to match on. E.g. for 'feature/AB-123' to match on the AB-123 use "^\\w+\\/(\\w+-\\w+).*"
       pattern: ".*"
       # Replace directive. E.g. for 'feature/AB-123' to start the commit message with 'AB-123 ' use "[$1] "
-      replace: "feat: "
+      replace: ""
   # See https://github.com/jesseduffield/lazygit/blob/master/docs/Config.md#predefined-branch-name-prefix
   branchPrefix: ""
   # If true, parse emoji strings in commit messages e.g. render :rocket: as 🚀
