--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -10,7 +10,8 @@ $mainMod = SUPER
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Delete, exit,
 bind = $mainMod, comma, togglefloating,
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, J, layoutmsg, togglesplit
+bind = $mainMod, R, layoutmsg, movetoroot
 bind = $mainMod, F, fullscreen,
 bind = $mainMod SHIFT, P, pin,
 
